--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Angel Pilor</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        header stuff
+    </header>
+    <div class="content">
+        <div class="intro">
+            <h1>Hello! I'm</h1>
+            <h1>Angel Pilor.</h1>
+            <p>Front-End Developer and *fun text that changes*</p>
+        </div>
+    </div>
 </body>
 </html>
